fixed publication table editing content overflow.

--- a/neuro_arcade/reactapp/src/styles/App.module.css
+++ b/neuro_arcade/reactapp/src/styles/App.module.css
@@ -181,7 +181,7 @@
                     width: max-content;
                     gap: 1em;
                     & input {
-                        width: 19em;
+                        width: 11.5em;
                         height: 3em;
                         border-radius: 0.5em;
                         padding: 0 1em;
